welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:20: error: not found: value color
  setCouleurBrosse(color.Black)
                   ^